[BugFix] 포스트 리스트 > overflow 처리

--- a/src/components/PostListVerbose/index.scss
+++ b/src/components/PostListVerbose/index.scss
@@ -68,6 +68,7 @@ $container-background-color: $yellow1;
             margin-top: -2px;
             font-size: 18px;
             line-height: 28px;
+            overflow: hidden;
             @media (max-width: $xs) {
               margin-top: 0;
               line-height: 20px;
